--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   background-color: #fff;
 }
 html {
-  width: fit-content;
+  width: 100%;
 }
 
 html, body {
@@ -24,6 +24,16 @@ html, body {
 }
 
 .formButtons > button {
+  margin: 1rem;
+  justify-content: center;
+}
+
+.loginForm, .signupForm {
+  margin: 3rem;
+}
+
+.loginFormButton, .signupFormButton {
+  display: flex;
   margin: 1rem;
   justify-content: center;
 }
@@ -79,7 +89,7 @@ button {
 }
 
 .dashboardContainer {
-  width: 800px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -139,7 +149,7 @@ nav > a, nav > button {
 }
 
 .Nav {
-  width: 100vw;
+  width: 100%;
 }
 
 .Nav_container {
@@ -163,7 +173,7 @@ nav > a, nav > button {
 }
 
 .viewedUser {
-  font-size: 48px;
+  font-size: large;
 }
 
 .welcome {
@@ -202,7 +212,10 @@ nav > a, nav > button {
   justify-content: center;
 }
 
-
+.leadsTable {
+  overflow-x: auto;
+  overflow-y:auto;
+}
 
 .Features {
   display: flex;
