--- a/src/App.css
+++ b/src/App.css
@@ -146,13 +146,14 @@ nav > a, nav > button {
   text-decoration: none;
   margin-right: .5rem;
   color: white;
+  font-size: 14px !important;
 }
 
 .navLinkList button {
   border: none;
   padding: 0;
   font-weight: bold;
-  font-size: 16px !important;
+  font-size: 14px !important;
 }
 
 .navLinkList > li > a:hover {
@@ -317,6 +318,9 @@ nav > a, nav > button {
   .loginForm, .signupForm {
     margin: 50px auto;
     width: 600px;
+  }
+  .leadView {
+    width: 450px
   }
 
   .dashboardContainer {
